[gd_scene load_steps=13 format=3 uid="uid://3eu1c2gakons"]

[ext_resource type="Script" path="res://EndOfDayScript.gd" id="1_ti30k"]
[ext_resource type="Texture2D" uid="uid://1kh6arxudsyj" path="res://sketch1759748468960.png" id="2_ak8yy"]
[ext_resource type="LabelSettings" uid="uid://bcqkdvslleoab" path="res://Intro Scene/TextBoxes.tres" id="3_8ac1f"]
[ext_resource type="Texture2D" uid="uid://b14tennne4hvg" path="res://Down.png" id="4_8lgcx"]
[ext_resource type="AudioStream" uid="uid://j0gajmj31m2k" path="res://Intro Scene/Typewriter Sound.wav" id="4_l0s1v"]
[ext_resource type="Texture2D" uid="uid://hnnmv06dq3v1" path="res://Up.png" id="5_blthv"]

[sub_resource type="Animation" id="Animation_ri31o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Money:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rent:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3o0m6"]
resource_name = "TweenText"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Money:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.66667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rent:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crkoc"]
_data = {
"RESET": SubResource("Animation_ri31o"),
"TweenText": SubResource("Animation_3o0m6")
}

[sub_resource type="Animation" id="Animation_cbuy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_oxciv"]
resource_name = "fadeout"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ub7sn"]
_data = {
"RESET": SubResource("Animation_cbuy8"),
"fadeout": SubResource("Animation_oxciv")
}

[node name="EndOfDayScene" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -13.0
offset_right = 1942.0
offset_bottom = 1098.0
color = Color(0, 0, 0, 1)

[node name="Textbox" type="Node" parent="."]
script = ExtResource("1_ti30k")

[node name="Sketch1759748468960" type="Sprite2D" parent="Textbox"]
position = Vector2(958, 530.875)
scale = Vector2(0.972396, 0.955787)
texture = ExtResource("2_ak8yy")

[node name="Label" type="Label" parent="Textbox"]
custom_minimum_size = Vector2(1, 1)
offset_left = 120.0
offset_top = 315.0
offset_right = 1840.0
offset_bottom = 734.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "     The day is over.
You have: £
You have paid £      in rent
Press the telegraph machine to continue."
label_settings = ExtResource("3_8ac1f")
horizontal_alignment = 1
autowrap_mode = 2
clip_text = true
visible_characters = 0
visible_ratio = 0.0

[node name="Money" type="Label" parent="Textbox"]
visible = false
offset_left = 1109.0
offset_top = 401.0
offset_right = 1256.0
offset_bottom = 502.0
text = "14.50"
label_settings = ExtResource("3_8ac1f")

[node name="Rent" type="Label" parent="Textbox"]
offset_left = 1003.0
offset_top = 492.0
offset_right = 1150.0
offset_bottom = 539.0
text = "14.50"
label_settings = ExtResource("3_8ac1f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Textbox"]
libraries = {
"": SubResource("AnimationLibrary_crkoc")
}
autoplay = "TweenText"

[node name="Typewriter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l0s1v")

[node name="Button" type="Button" parent="."]
offset_left = 858.0
offset_top = 685.0
offset_right = 994.0
offset_bottom = 852.0

[node name="Down" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(962.25, 545)
scale = Vector2(1.40623, 1.40625)
texture = ExtResource("4_8lgcx")

[node name="Up" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(962, 545)
texture = ExtResource("5_blthv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer")
libraries = {
"": SubResource("AnimationLibrary_ub7sn")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 0)
light_mask = 7
visibility_layer = 31
offset_right = 1930.0
offset_bottom = 1088.0
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="Textbox/AnimationPlayer" to="Textbox" method="_on_animation_finished"]
[connection signal="button_down" from="Button" to="Textbox" method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="Textbox" method="_on_button_button_up"]
[connection signal="pressed" from="Button" to="Textbox" method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="Textbox" method="_on_fadeout_finished"]
